fix: datasets in tutorial 01

--- a/notebooks/01_analysing_SHS_projects.ipynb
+++ b/notebooks/01_analysing_SHS_projects.ipynb
@@ -20,9 +20,6 @@
     "2. **CORDIS Horizon Projects (EU)**  \n",
     "   - Source: [CORDIS Portal](https://cordis.europa.eu/data/cordis-HORIZONprojects-csv.zip)  \n",
     "\n",
-    "3. **Irish Research Council (IRC)**  \n",
-    "   - Source: [research.ie](https://research.ie/awardees_search/download.php?file=irc-awardees-search--.csv)  \n",
-    "\n",
     "We will store the raw files under:  \n",
     "\n",
     "```\n",
@@ -933,12 +930,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_projects = pd.read_parquet('../data/analysing_SHS_projects/projects_with_ssh_labels.parquet',engine='pyarrow')\n"
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, TextClassificationPipeline\n",
+    "\n",
+    "df_projects = pd.read_parquet('../data/analysing_SHS_projects/projects_with_ssh_labels.parquet',engine='pyarrow')\n",
+    "\n",
+    "# Step 4.1 Filter SSH projects\n",
+    "df_ssh = df_projects[df_projects.ssh].reset_index(drop=True).copy()\n",
+    "print(\"SSH projects:\", len(df_ssh))\n",
+    "\n",
+    "# Step 4.3 Run predictions\n",
+    "from datasets import Dataset\n",
+    "from transformers.pipelines.pt_utils import KeyDataset\n",
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "dataset_ssh = Dataset.from_pandas(df_ssh[['text']])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 4.2 Load ERC classifier (multilabel)\n",
+    "erc_model_name = \"nicolauduran45/erc_classifier_demo\"\n",
+    "\n",
+    "erc_tokenizer = AutoTokenizer.from_pretrained(erc_model_name)\n",
+    "erc_model = AutoModelForSequenceClassification.from_pretrained(erc_model_name)\n",
+    "\n",
+    "pipeline_erc = TextClassificationPipeline(\n",
+    "    model=erc_model,\n",
+    "    tokenizer=erc_tokenizer,\n",
+    "    device=0,              # GPU\n",
+    "    padding=True,\n",
+    "    truncation=True,\n",
+    "    max_length=512,\n",
+    "    return_all_scores=True # critical for multilabel\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1017,35 +1050,6 @@
     }
    ],
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, TextClassificationPipeline\n",
-    "\n",
-    "# Step 4.1 Filter SSH projects\n",
-    "df_ssh = df_projects[df_projects.ssh].reset_index(drop=True).copy()\n",
-    "print(\"SSH projects:\", len(df_ssh))\n",
-    "\n",
-    "# Step 4.2 Load ERC classifier (multilabel)\n",
-    "erc_model_name = \"nicolauduran45/erc_classifier_demo\"\n",
-    "\n",
-    "erc_tokenizer = AutoTokenizer.from_pretrained(erc_model_name)\n",
-    "erc_model = AutoModelForSequenceClassification.from_pretrained(erc_model_name)\n",
-    "\n",
-    "pipeline_erc = TextClassificationPipeline(\n",
-    "    model=erc_model,\n",
-    "    tokenizer=erc_tokenizer,\n",
-    "    device=0,              # GPU\n",
-    "    padding=True,\n",
-    "    truncation=True,\n",
-    "    max_length=512,\n",
-    "    return_all_scores=True # critical for multilabel\n",
-    ")\n",
-    "\n",
-    "# Step 4.3 Run predictions\n",
-    "from datasets import Dataset\n",
-    "from transformers.pipelines.pt_utils import KeyDataset\n",
-    "from tqdm.auto import tqdm\n",
-    "\n",
-    "dataset_ssh = Dataset.from_pandas(df_ssh[['text']])\n",
-    "\n",
     "outputs = []\n",
     "for out in tqdm(pipeline_erc(KeyDataset(dataset_ssh, \"text\"), batch_size=16), total=len(dataset_ssh)):\n",
     "    outputs.append(out)\n",
@@ -1073,6 +1077,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ssh.to_parquet('../data/analysing_SHS_projects/projects_with_erclabels.parquet', index=False, engine='pyarrow')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1095,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1105,13 +1118,13 @@
       "\n",
       "=== Testing model: meta-llama/Llama-3.3-70B-Instruct-Turbo ===\n",
       "Response: - Public and academic dissemination: \n",
-      "- Policy advice and consultation: \n",
-      "- Stakeholder engagement and co-creation: \"les acteurs de la société civile\"\n",
+      "- Policy advice and consultation: \"continuously receiving guidance from the EU Policy Instrument (EMPACT)\"\n",
+      "- Stakeholder engagement and co-creation: \"establish a broad ecosystem of crime-relevant stakeholders\"\n",
       "- Citizen science and participatory research: \n",
-      "- Education and training initiatives: \n",
+      "- Education and training initiatives: \"produce training curricula\"\n",
       "- Cultural production and advocacy: \n",
       "- Expert services and open licensing: \n",
-      "- Institutional and social innovation: \"meilleure structuration de la gouvernance du risque\" \n",
+      "- Institutional and social innovation: \"contribute to LEAs operational standards\" \n",
       "\n"
      ]
     }
@@ -1179,7 +1192,7 @@
     "\"\"\"\n",
     "\n",
     "# --- Test with a single project ---\n",
-    "id = 50\n",
+    "id = 5067\n",
     "text = df_ssh.loc[id, \"text\"]\n",
     "\n",
     "TEST_PROMPT = build_prompt(VALORISATION_CHANNELS, text)\n",
@@ -1202,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1210,8 +1223,8 @@
       "text/html": [
        "\n",
        "    <div style=\"font-family:Arial, sans-serif; line-height:1.5;\">\n",
-       "      <div><b style=\"color:darkblue;\">Title:</b> Etudes Multidisciplinaires du Mouvement de Séchilienne : aléa, risques associés et conséquences socio-économiques</div>\n",
-       "      <div style=\"margin-top:10px;\"><b style=\"color:darkgreen;\">Abstract:</b> Les mouvements de terrain de grande ampleur ont un impact socio-économique qui peut s?avérer dramatique. Les mécanismes contrôlant leur dynamique ou leur déclenchement sont nombreux et complexes, ce qui entraîne une forte incertitude dans la prévision que ce soit dans le domaine spatial (volume mis en jeu, localisation) ou temporel (occurrence, dynamique). Ceci provoque un important décalage entre la communauté scientifique, les gestionnaires du risque et <mark style='background-color:#9999ff'>les acteurs de la société civile</mark><sub><b style='color:#9999ff'>Stakeholder engagement and co-creation</b></sub>, car la gestion des incertitudes est abordée selon des protocoles très divers, propres aux acteurs impliqués et à leur responsabilité. Le présent projet se propose de les fédérer sur un site sensible, le mouvement de terrain de Séchilienne. En effet, en France métropolitaine, celui-ci constitue probablement le phénomène naturel présentant potentiellement le plus fort risque combiné en termes de conséquences socio-économiques. Ce site est un exemple emblématique des questions épineuses soulevées depuis 25 ans de gestion administrative, scientifique et politique, notamment en raison de sa dimension pluridisciplinaire. L’investissement sociétal considérable effectué au cours de ces années a privilégié la gestion du risque. A l’inverse, ce site a souffert du manque de projets de recherche fondamentale véritablement interdisciplinaires. Nous proposons donc un projet ambitieux qui vise à étudier non seulement l’aléa mais aussi la vulnérabilité organisationnelle, pour proposer une <mark style='background-color:#66b3ff'>meilleure structuration de la gouvernance du risque</mark><sub><b style='color:#66b3ff'>Institutional and social innovation</b></sub>. Au niveau de l’aléa, nous proposons une approche multidisciplinaire reposant sur le système de surveillance actuel et sur l’acquisition de nouvelles données. Ces données serviront de base d’entrée à différents types de modélisations numériques qui viseront à reproduire la dynamique passée et actuelle. Cet ensemble de travaux servira de porte d’entrée à la constitution d’un arbre de décision interdisciplinaire prenant en compte les incertitudes.</div>\n",
+       "      <div><b style=\"color:darkblue;\">Title:</b> Countering Crime and Terrorism and their Links to Transnational Illegal Activities by Fostering International Cooperation</div>\n",
+       "      <div style=\"margin-top:10px;\"><b style=\"color:darkgreen;\">Abstract:</b> AVALANCHE Vision: While technological solutions for investigations and global cooperation do exist, they are mostly fragmented and myopic focusing on providing very narrow and isolated functions within their own boundaries without ensuring interoperability and international cooperation. To alleviate the limitations of existing solutions, AVALANCHE aims to make transformative steps towards the development of a highly innovative, holistic, multi-disciplinary, high-tech, and versatile solution for significantly increasing/broadening the operational capabilities of LEAs in their struggle to detect, analyse, track, investigate and prevent cross-border illicit activities of high-risk criminal networks, migrant smuggling, firearms, drugs, child exploitation, terrorism, cyber and intellectual property crime coordinated through the digital world. Building on Pillars I and II, the AVALANCHE platform will offer tools for semi-automatic collection of evidence to foster explainable investigations and reasoning through intelligence-led methods and contextual-aware gleaning of actions. Also, building on Pillar III, the AVALANCHE platform will provide interoperable systems and interconnection with national and international databases through common standards, data and schemas alignment, and mediation to foster information exchange and international cooperation. To guarantee the wide SMEs solutions adoption by the actual practitioners, AVALANCHE will <mark style='background-color:#cc99ff'>produce training curricula</mark><sub><b style='color:#cc99ff'>Education and training initiatives</b></sub>, benchmark with Europol’s Innovation Lab, <mark style='background-color:#66b3ff'>contribute to LEAs operational standards</mark><sub><b style='color:#66b3ff'>Institutional and social innovation</b></sub> and <mark style='background-color:#9999ff'>establish a broad ecosystem of crime-relevant stakeholders</mark><sub><b style='color:#9999ff'>Stakeholder engagement and co-creation</b></sub>, and complement its objectives by <mark style='background-color:#99ff99'>continuously receiving guidance from the EU Policy Instrument (EMPACT)</mark><sub><b style='color:#99ff99'>Policy advice and consultation</b></sub>. Finally, AVALANCHE will validate the integrated platform through a demonstration in diverse business scenarios of HP that cover key operational domains (from cross-border illicit activities to antisemitism, and more) with notable societal and market impact.</div>\n",
        "    </div>\n",
        "    "
       ],
@@ -1225,7 +1238,7 @@
     {
      "data": {
       "text/html": [
-       "<div style='margin-top:10px;'><b>Predicted ERC labels:</b> <b style='color:orange'>Individuals, Markets and Organisations</b>, <b style='color:orange'>The Social World and Its Interactions</b></div>"
+       "<div style='margin-top:10px;'><b>Predicted ERC labels:</b> <b style='color:orange'>Computer Science and Informatics</b>, <b style='color:orange'>Individuals, Markets and Organisations</b>, <b style='color:orange'>Institutions, Governance and Legal Systems</b></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1324,27 +1337,7 @@
     "    for label in df_ssh.loc[id, 'erc_labels']\n",
     "])\n",
     "erc_html = f\"<div style='margin-top:10px;'><b>Predicted ERC labels:</b> {pred_labels_html}</div>\"\n",
-    "display(HTML(erc_html))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5708"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "id"
+    "display(HTML(erc_html))"
    ]
   }
  ],
