fix: remove projects with empty title and abstract

--- a/notebooks/01_analysing_SHS_projects.ipynb
+++ b/notebooks/01_analysing_SHS_projects.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "4                                                NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -551,61 +551,61 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10304</th>\n",
-       "      <td>101080164</td>\n",
-       "      <td>Deep Ultraviolet Laser For Quantum Technology</td>\n",
-       "      <td>Lasers are the heart of today’s quantum scienc...</td>\n",
+       "      <th>14417</th>\n",
+       "      <td>101055379</td>\n",
+       "      <td>Fluorides for 2D Next-Generation Nanoelectronics</td>\n",
+       "      <td>The IRDS roadmap considers two-dimensional (2D...</td>\n",
        "      <td>cordis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15085</th>\n",
-       "      <td>101188025</td>\n",
-       "      <td>An Application for leveraging large-scale hist...</td>\n",
-       "      <td>HistText is a groundbreaking application devel...</td>\n",
+       "      <th>14749</th>\n",
+       "      <td>190196379</td>\n",
+       "      <td>Gate2Brain. Medicines beyond barriers.</td>\n",
+       "      <td>In 2019, 30 million people worldwide were diag...</td>\n",
        "      <td>cordis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13009</th>\n",
-       "      <td>101158232</td>\n",
-       "      <td>Universal Data Compression with Circular Conte...</td>\n",
-       "      <td>Within the ITUL project, funded by an ERC Cons...</td>\n",
+       "      <th>17176</th>\n",
+       "      <td>101131139</td>\n",
+       "      <td>Spanish Presidency Conference: MSCA DIverse RE...</td>\n",
+       "      <td>The project MSCA DiReCT-GC (DIverse REsearch C...</td>\n",
        "      <td>cordis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10090</th>\n",
-       "      <td>101052653</td>\n",
-       "      <td>Why late earliest occupation of Western Europe ?</td>\n",
-       "      <td>The project aims to question human migrations ...</td>\n",
-       "      <td>cordis</td>\n",
+       "      <th>4016</th>\n",
+       "      <td>ANR-07-BLAN-0101</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Les molécules soufrées sont présentes chez tou...</td>\n",
+       "      <td>anr</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20812</th>\n",
-       "      <td>101087829</td>\n",
-       "      <td>Straintronic control of correlations in twiste...</td>\n",
-       "      <td>Correlations and topology are the cornerstones...</td>\n",
-       "      <td>cordis</td>\n",
+       "      <th>3374</th>\n",
+       "      <td>ANR-07-JCJC-0109</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>\"Les genes Hox sont des facteurs de transcript...</td>\n",
+       "      <td>anr</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      project_id                                              title  \\\n",
-       "10304  101080164      Deep Ultraviolet Laser For Quantum Technology   \n",
-       "15085  101188025  An Application for leveraging large-scale hist...   \n",
-       "13009  101158232  Universal Data Compression with Circular Conte...   \n",
-       "10090  101052653   Why late earliest occupation of Western Europe ?   \n",
-       "20812  101087829  Straintronic control of correlations in twiste...   \n",
+       "             project_id                                              title  \\\n",
+       "14417         101055379   Fluorides for 2D Next-Generation Nanoelectronics   \n",
+       "14749         190196379             Gate2Brain. Medicines beyond barriers.   \n",
+       "17176         101131139  Spanish Presidency Conference: MSCA DIverse RE...   \n",
+       "4016   ANR-07-BLAN-0101                                                NaN   \n",
+       "3374   ANR-07-JCJC-0109                                                NaN   \n",
        "\n",
        "                                                abstract  source  \n",
-       "10304  Lasers are the heart of today’s quantum scienc...  cordis  \n",
-       "15085  HistText is a groundbreaking application devel...  cordis  \n",
-       "13009  Within the ITUL project, funded by an ERC Cons...  cordis  \n",
-       "10090  The project aims to question human migrations ...  cordis  \n",
-       "20812  Correlations and topology are the cornerstones...  cordis  "
+       "14417  The IRDS roadmap considers two-dimensional (2D...  cordis  \n",
+       "14749  In 2019, 30 million people worldwide were diag...  cordis  \n",
+       "17176  The project MSCA DiReCT-GC (DIverse REsearch C...  cordis  \n",
+       "4016   Les molécules soufrées sont présentes chez tou...     anr  \n",
+       "3374   \"Les genes Hox sont des facteurs de transcript...     anr  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -691,70 +691,175 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>project_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>abstract</th>\n",
        "      <th>source</th>\n",
        "      <th>text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12928</th>\n",
-       "      <td>101097433</td>\n",
-       "      <td>cordis</td>\n",
-       "      <td>Title: Ultimate fracture toughness through thi...</td>\n",
+       "      <th>0</th>\n",
+       "      <td>ANR-09-VPTT-0015</td>\n",
+       "      <td>Convertisseur auxiliaire avancé à refroidissem...</td>\n",
+       "      <td>L’objectif du Projet ATAC-CONCEPT est de dével...</td>\n",
+       "      <td>anr</td>\n",
+       "      <td>Title: Convertisseur auxiliaire avancé à refro...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17267</th>\n",
-       "      <td>101110350</td>\n",
-       "      <td>cordis</td>\n",
-       "      <td>Title: The Drought Impact on the Climate Benef...</td>\n",
+       "      <th>1</th>\n",
+       "      <td>ANR-09-VPTT-0014</td>\n",
+       "      <td>VOLant pour personne âgée et/ou HANDicapée : D...</td>\n",
+       "      <td>A ce jour, il n’existe pas de système de direc...</td>\n",
+       "      <td>anr</td>\n",
+       "      <td>Title: VOLant pour personne âgée et/ou HANDica...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10685</th>\n",
-       "      <td>101084481</td>\n",
-       "      <td>cordis</td>\n",
-       "      <td>Title: The ForestWard Observatory to Secure Re...</td>\n",
+       "      <th>2</th>\n",
+       "      <td>ANR-09-VPTT-0013</td>\n",
+       "      <td>Gérer les compromis de propriétés des caoutcho...</td>\n",
+       "      <td>Les silices précipitées sont utilisées comme c...</td>\n",
+       "      <td>anr</td>\n",
+       "      <td>Title: Gérer les compromis de propriétés des c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17939</th>\n",
-       "      <td>101151931</td>\n",
-       "      <td>cordis</td>\n",
-       "      <td>Title: VIA-TARIQ: Analysing the long-term chan...</td>\n",
+       "      <th>3</th>\n",
+       "      <td>ANR-09-VPTT-0012</td>\n",
+       "      <td>SYstème d'admission Novateur pour des Emission...</td>\n",
+       "      <td>Les transports terrestres et en particulier au...</td>\n",
+       "      <td>anr</td>\n",
+       "      <td>Title: SYstème d'admission Novateur pour des E...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20104</th>\n",
-       "      <td>101181208</td>\n",
+       "      <th>4</th>\n",
+       "      <td>ANR-09-VPTT-0011</td>\n",
+       "      <td>Détermination de la Limitation de Vitesse par ...</td>\n",
+       "      <td>Afin d'assurer une sécurité maximale sur les r...</td>\n",
+       "      <td>anr</td>\n",
+       "      <td>Title: Détermination de la Limitation de Vites...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24278</th>\n",
+       "      <td>101040681</td>\n",
+       "      <td>SUpramolecularly engineered functional  PERovs...</td>\n",
+       "      <td>SUPER will develop functional, self-assembled ...</td>\n",
        "      <td>cordis</td>\n",
-       "      <td>Title: MYcotoxin MAnagement (AI)platform To fa...</td>\n",
+       "      <td>Title: SUpramolecularly engineered functional ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24279</th>\n",
+       "      <td>101212156</td>\n",
+       "      <td>Moving Forward: Implementing the EU Space Stra...</td>\n",
+       "      <td>The EUSTAR project critically examines the imp...</td>\n",
+       "      <td>cordis</td>\n",
+       "      <td>Title: Moving Forward: Implementing the EU Spa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24280</th>\n",
+       "      <td>101061722</td>\n",
+       "      <td>SOCIETY riPENSAci</td>\n",
+       "      <td>Think again! Change your perspective and be re...</td>\n",
+       "      <td>cordis</td>\n",
+       "      <td>Title: SOCIETY riPENSAci\\n\\nAbstract: Think ag...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24281</th>\n",
+       "      <td>101136217</td>\n",
+       "      <td>CO2 ROUTES ACROSS EUROPE</td>\n",
+       "      <td>COREu will demonstrate key enabling technologi...</td>\n",
+       "      <td>cordis</td>\n",
+       "      <td>Title: CO2 ROUTES ACROSS EUROPE\\n\\nAbstract: C...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24282</th>\n",
+       "      <td>101132079</td>\n",
+       "      <td>Quadruple-helix-based knowledge valorisation b...</td>\n",
+       "      <td>KALEIDOS brings together research and innovati...</td>\n",
+       "      <td>cordis</td>\n",
+       "      <td>Title: Quadruple-helix-based knowledge valoris...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>24283 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      project_id  source                                               text\n",
-       "12928  101097433  cordis  Title: Ultimate fracture toughness through thi...\n",
-       "17267  101110350  cordis  Title: The Drought Impact on the Climate Benef...\n",
-       "10685  101084481  cordis  Title: The ForestWard Observatory to Secure Re...\n",
-       "17939  101151931  cordis  Title: VIA-TARIQ: Analysing the long-term chan...\n",
-       "20104  101181208  cordis  Title: MYcotoxin MAnagement (AI)platform To fa..."
+       "             project_id                                              title  \\\n",
+       "0      ANR-09-VPTT-0015  Convertisseur auxiliaire avancé à refroidissem...   \n",
+       "1      ANR-09-VPTT-0014  VOLant pour personne âgée et/ou HANDicapée : D...   \n",
+       "2      ANR-09-VPTT-0013  Gérer les compromis de propriétés des caoutcho...   \n",
+       "3      ANR-09-VPTT-0012  SYstème d'admission Novateur pour des Emission...   \n",
+       "4      ANR-09-VPTT-0011  Détermination de la Limitation de Vitesse par ...   \n",
+       "...                 ...                                                ...   \n",
+       "24278         101040681  SUpramolecularly engineered functional  PERovs...   \n",
+       "24279         101212156  Moving Forward: Implementing the EU Space Stra...   \n",
+       "24280         101061722                                  SOCIETY riPENSAci   \n",
+       "24281         101136217                           CO2 ROUTES ACROSS EUROPE   \n",
+       "24282         101132079  Quadruple-helix-based knowledge valorisation b...   \n",
+       "\n",
+       "                                                abstract  source  \\\n",
+       "0      L’objectif du Projet ATAC-CONCEPT est de dével...     anr   \n",
+       "1      A ce jour, il n’existe pas de système de direc...     anr   \n",
+       "2      Les silices précipitées sont utilisées comme c...     anr   \n",
+       "3      Les transports terrestres et en particulier au...     anr   \n",
+       "4      Afin d'assurer une sécurité maximale sur les r...     anr   \n",
+       "...                                                  ...     ...   \n",
+       "24278  SUPER will develop functional, self-assembled ...  cordis   \n",
+       "24279  The EUSTAR project critically examines the imp...  cordis   \n",
+       "24280  Think again! Change your perspective and be re...  cordis   \n",
+       "24281  COREu will demonstrate key enabling technologi...  cordis   \n",
+       "24282  KALEIDOS brings together research and innovati...  cordis   \n",
+       "\n",
+       "                                                    text  \n",
+       "0      Title: Convertisseur auxiliaire avancé à refro...  \n",
+       "1      Title: VOLant pour personne âgée et/ou HANDica...  \n",
+       "2      Title: Gérer les compromis de propriétés des c...  \n",
+       "3      Title: SYstème d'admission Novateur pour des E...  \n",
+       "4      Title: Détermination de la Limitation de Vites...  \n",
+       "...                                                  ...  \n",
+       "24278  Title: SUpramolecularly engineered functional ...  \n",
+       "24279  Title: Moving Forward: Implementing the EU Spa...  \n",
+       "24280  Title: SOCIETY riPENSAci\\n\\nAbstract: Think ag...  \n",
+       "24281  Title: CO2 ROUTES ACROSS EUROPE\\n\\nAbstract: C...  \n",
+       "24282  Title: Quadruple-helix-based knowledge valoris...  \n",
+       "\n",
+       "[24283 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df_projects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Step 3.1 Dataset preparation\n",
+    "# Remove records with missing title and abstract\n",
+    "df_projects = df_projects[~(df_projects['title'].isna() & df_projects['abstract'].isna())].reset_index(drop=True)\n",
+    "\n",
     "df_projects['text'] = (\n",
     "    'Title: ' + df_projects['title'].fillna('').str.strip() +\n",
     "    '\\n\\nAbstract: ' + df_projects['abstract'].fillna('').str.strip()\n",
     ")\n",
     "\n",
     "# drop duplicates\n",
-    "df_projects = df_projects.drop(columns=['id','title', 'abstract']).drop_duplicates().reset_index(drop=True)\n",
-    "\n",
-    "df_projects[['project_id', 'source', 'text']].sample(5)"
+    "df_projects = df_projects.drop_duplicates().reset_index(drop=True)"
    ]
   },
   {
